Bug fix for page jumping when moi image loaded

--- a/src/components/comp-welcome-banner/comp-welcome-banner.css
+++ b/src/components/comp-welcome-banner/comp-welcome-banner.css
@@ -64,6 +64,10 @@
   grid-column: 2 / -2;
   grid-row: 10 / 16;
 
+  /* Help with watercolour image loading quicker than this
+     and causing it to jump when loaded */
+  min-height: 3em;
+
   z-index: 1;
 }
 
